# LCPlayer

./: settings.gradle
app/: CMakeLists.txt  build.gradle
app/src/androidTest/java/com/lc/lp/: ExampleInstrumentedTest.java
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: LCAVCodecHandler.cpp  LCAVCodecHandler.h  LCAudioPlayer.cpp  LCAudioPlayer.h  LCGLVideoRender.cpp  LCGLVideoRender.h  LCNDKCommonDef.h  LCNDKLogDef.h  LCOpenGLShader.cpp  LCOpenGLShader.h  LCPlayer.cpp  LCPlayer.h  LCQueueDef.h  LCYUVDataDefine.h  OpenSLInterface.c  OpenSLInterface.h  native-lib.cpp
app/src/main/java/com/lc/lp/: LCPlayer.java  MainActivity.java
app/src/main/java/com/lc/lp/utils/: CommonUtils.java  GlideEngine.java  ImageLoaderUtils.java
app/src/main/res/layout/: activity_main.xml  layout_action_bar.xml
app/src/main/res/values/: strings.xml  themes.xml
app/src/main/res/values-night/: themes.xml
app/src/test/java/com/lc/lp/: ExampleUnitTest.java
gradle/wrapper/: gradle-wrapper.properties
